Fix images on mobile devices

--- a/style.css
+++ b/style.css
@@ -235,3 +235,7 @@ body { height: 100%; margin: 0; padding: 0 }
 	width: 100%;
 	height: 100%;
 }
+
+#info-body img {
+	width: 100%;
+}
